@@ -4,6 +4,7 @@
 	  the codebase.
 	  Remove a redundant memset to 0 after a calloc(). Also check for null
 	  to prevent potential segfaults.
+	  Optimize out newx and newy in get_map_flags(). x and y are already copies.
 
 2016-05-17  Daniel Hawkins
 	* common/living.c: Change the depletion message for Con loss to differentiate
